tests/rosetta/out/Fortran/binary-strings.error
gfortran: exit status 1
/tmp/binary-strings.f90:106:52:

  106 |   recursive character(len=100) function fromBytes(bs) result(res)
      |                                                    1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘bs’ at (1)
/tmp/binary-strings.f90:99:38:

   99 |     if ((((idx < 0) .or. idx) >= size(letters))) then
      |                                      1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/binary-strings.f90:99:24:

   99 |     if ((((idx < 0) .or. idx) >= size(letters))) then
      |                        1
Error: Operands of logical operator ‘.or.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/binary-strings.f90:111:11:

  111 |       s = (s + char(bs(((i)+1))))
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/binary-strings.f90:110:24:

  110 |     do while ((i < size(bs)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/binary-strings.f90:29:2:

   29 |   c = b
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/binary-strings.f90:46:21:

   46 |   print *, fromBytes(b)
      |                     1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
/tmp/binary-strings.f90:47:21:

   47 |   print *, fromBytes(d)
      |                     1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
/tmp/binary-strings.f90:54:2:

   54 |   z = app5
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/binary-strings.f90:55:21:

   55 |   print *, fromBytes(z)
      |                     1
Error: Expected a procedure for argument ‘bs’ at (1)
/tmp/binary-strings.f90:56:2:

   56 |   sub = b((1)+1:3)
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/binary-strings.f90:57:21:

   57 |   print *, fromBytes(sub)
      |                     1
Error: Expected a procedure for argument ‘bs’ at (1)
/tmp/binary-strings.f90:77:53:

   77 |   print *, trim(fromBytes(d) // ' -> ') // fromBytes(f)
      |                                                     1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
/tmp/binary-strings.f90:77:26:

   77 |   print *, trim(fromBytes(d) // ' -> ') // fromBytes(f)
      |                          1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
/tmp/binary-strings.f90:93:21:

   93 |   print *, fromBytes(rem)
      |                     1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
